--- a/public/css/style.css
+++ b/public/css/style.css
@@ -384,6 +384,19 @@ h1, h2, h3, h4, h5, h6 {
   #mobile-nav-toggle {
     display: inline;
   }
+ 
+}
+
+@media (max-width: 568px) {
+  #mobile-nav-toggle {
+    display: inline;
+  }
+  
+}
+@media (max-width: 468px) {
+  #mobile-nav-toggle {
+    display: inline;
+  }
 }
 
 /* Mobile Nav Styling */
