--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,7 +44,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100%;
   overflow: visible;
-  background: #fff url("../img/preloader.svg") no-repeat center center;
+  background: #fff url("../img/preloade.svg") no-repeat center center;
 }
 
 /* Back to top button */
@@ -113,14 +113,16 @@ h1, h2, h3, h4, h5, h6 {
 
 #header #logo img {
   padding: 0;
-  margin: -20px;  width: 75px;
+  margin: 0;
 }
 
 @media (max-width: 768px) {
   #header #logo h1 {
     font-size: 26px;
   }
-
+  #header #logo img {
+    max-height: 40px;
+  }
 }
 
 #header.header-fixed {
@@ -136,7 +138,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(../img/bannier.jpg) top center;
+  background: url(../img/hero-bg.jpg) top center;
   background-size: cover;
   position: relative;
 }
@@ -384,19 +386,6 @@ h1, h2, h3, h4, h5, h6 {
   #mobile-nav-toggle {
     display: inline;
   }
- 
-}
-
-@media (max-width: 568px) {
-  #mobile-nav-toggle {
-    display: inline;
-  }
-  
-}
-@media (max-width: 468px) {
-  #mobile-nav-toggle {
-    display: inline;
-  }
 }
 
 /* Mobile Nav Styling */
@@ -513,16 +502,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #about .about-container .background {
   min-height: 300px;
-  background: url() center top no-repeat;
-  
+  background: url(../img/abot-img.jpg) center top no-repeat;
   margin-bottom: 10px;
 }
-#about   img {
- width: 100%;
- margin-top: 10%;
- border-radius: 50px;
-}
-
 
 #about .about-container .content {
   background: #fff;
@@ -538,9 +520,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   #about .about-container .title {
     padding-top: 15px;
   }
-  #about   img {
- display: none;
-   }
 }
 
 #about .about-container p {
@@ -690,7 +669,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* Call To Action Section
 --------------------------------*/
 #call-to-action {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/call-to-action-bg.jpg) fixed center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/call-to-action-b.jpg) fixed center center;
   background-size: cover;
   padding: 80px 0;
 }
